# Project_Aestas

./: .gitignore  AGENT_RULES.md  INIT_PROMPT.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tags_feed_sources_articles.py  002_insights_and_tag_briefs.py  003_prompt_templates.py  004_m5_story_clusters.py  005_m5b2_taxonomy_pgvector.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: articles.py  (+7 more)
backend/app/core/: config.py  database.py  deps.py  exceptions.py  response.py  time_windows.py
backend/app/models/: __init__.py  article.py  article_insight.py  feed_source.py  prompt_template.py  story_cluster.py  tag.py  tag_brief.py  taxonomy_tag.py
backend/app/schemas/: article.py  clustering.py  feed_source.py  insight.py  prompt_template.py  tag.py  tag_brief.py
backend/app/services/: prompt_loader.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_briefing_markdown.py  test_briefing_service.py  test_clustering_markdown.py  test_content_tags.py  test_extraction_markdown.py  test_extraction_service.py  test_feed_sources_api.py  test_health.py  test_ingestion_integration.py  test_ingestion_long_url.py  test_ingestion_service.py  test_llm_client.py  test_match_utils.py  test_prompt_templates_api.py  test_prompts.py  test_rss_parser.py  test_seed.py  test_tag_briefs_api.py  test_time_windows.py  test_url_utils.py  test_workers_m3.py
backend/tests/fixtures/: sample_rss.xml
(+66 files in other folders)
